@@ -73,6 +73,7 @@ parent                   = 0
 
 [Prereqs / TestRequires]
 Test2::Tools::QuickDB  = 0.000037
+Parallel::Runner       = 0
 Carp::Always           = 0
 Test2::Require::Module = 0
 Test2::Tools::Subtest  = 0
@@ -93,6 +94,7 @@ DateTime::Format::MySQL  = 0
 DateTime::Format::Pg     = 0
 DateTime::Format::SQLite = 0
 Carp::Always             = 0
+Parallel::Runner         = 0
 
 [Prereqs / RuntimeSuggests]
 Class::XSAccessor        = 1.19
