@@ -1,6 +1,7 @@
 {{$NEXT}}
 
     - Fix #25, add Carp::Always to test and develop deps
+    - Fix #26, Add Parallel::Runner to deps, fix interface.t when db is missing
 
 0.000015  2025-06-13 17:37:50-07:00 America/Los_Angeles
 
